# minifs-ecosystem

./: CMakeLists.txt  README.md
cmake/: FindKernelHeaders.cmake
console/: CMakeLists.txt  main.c
contrib/: CMakeLists.txt
core/: CMakeLists.txt  Kbuild  Makefile  README.md  build.sh
core/include/minifs/: constants.h  disk.h  errors.h  filesystem_context.h  high_level.h  middle_level.h  textual.h  transfer-protocol.h  utils.h
core/include/minifs/core/: bitmap.h  block.h  directory.h  file.h  i_node.h  superblock.h
core/include/minifs/std-wrapper/: memory.h  stdint.h  string.h
core/include/minifs/storage-drivers/: file_storage_driver.h  in_memory_storage_driver.h  storage_driver_interface.h
core/src/: disk.c  errors.c  kernel.c  kernel_disk.c  main.c  textual.c  utils.c
core/src/core/: bitmap.c  block.c  superblock.c
core/src/core/directory/: clear.c  existant.c  get_file_i_node.c  get_files_list.c  get_number_of_files.c  manage_file_in_subdirs.c  register_file.c
core/src/core/file/: existant.c  get_contents.c  get_length.c  manage_block_data.c  overwrite.c
core/src/core/i_node/: existance.c  get_block_info.c  manage_block_count.c
core/src/high_level/: directory.c  file.c  filesystem.c
core/src/middle_level/: directory.c  file.c  filesystem.c
core/src/storage-drivers/: file_storage_driver.c  in_memory_storage_driver.c
core/src/transfer-protocol/: create_request.c  parse_request.c  response.c
kernel/: CMakeLists.txt  hello.c
server/: CMakeLists.txt  answers.c  answers.h  main.c
